# quant-trading

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: NEW-CHAT-STARTING-PROMPT.md
.github/workflows/: ci.yml  daily-rebalance.yml  nightly-backtest.yml  posttrade-reconciliation.yml  premarket-health.yml  smoke-test.yml  weekly-grid-search.yml  weekly-validation-governance.yml
data/governance/: allocation.json  drift_report.json  strategy_states.json  validation_manifest.json
data/live/: equity.parquet  strategy_positions.parquet  trades.parquet
data/regime/: model.json  regime_series.parquet
data/research/: experiments.jsonl
data/risk/: portfolio_risk.json  portfolio_risk_gate.2026-06-03.json  portfolio_risk_gate.2026-06-05.json  pretrade_report.json
deploy/: README.md  com.ajaiupadhyaya.quant-engine.plist  com.ajaiupadhyaya.quant-guard.plist  com.ajaiupadhyaya.quant-tick.plist  install.sh  pmset.sh  uninstall.sh
deploy/launchd/: com.quant.intraday-live.plist
deploy/newsyslog/: quant-deploy.conf
docs/: CHARTER.md  institutional-research-ops.md  intraday-live-runbook.md  operator-runbook.md
docs/analyst/: 2026-06-02.md  2026-06-03.md  2026-06-05.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  brief-2026-06-02.md  brief-2026-06-03.md  brief-2026-06-05.md  brief-2026-06-08.md  brief-2026-06-09.md  brief-2026-06-10.md  brief-2026-06-11.md
docs/audits/: 2026-05-29-gate-calibration-audit.md  2026-06-19-honesty-audit.md
docs/live-recon/: 2026-05-26.md  2026-05-29.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-05.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  cost-model-interpretation.md
docs/notes/: 2026-05-25-go-live-decisions.md  (+3 more)
quant/: __init__.py  cli.py  tui.py
scripts/: live_watch.py  reconcile_live.py  smoke_rebalance.py
tests/: conftest.py  test_cli.py  test_cli_hedge.py  test_smoke.py  test_tui.py
(+520 files in other folders)
