[project]
name = "quant"
version = "0.1.0"
description = "Systematic trading project: 5 strategies, paper-traded on Alpaca via GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ajaiupadhyaya" }]

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "loguru>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alpaca-py>=0.30",
    "yfinance>=0.2.40",
    "fredapi>=0.5",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "hypothesis>=6.98",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-requests",
    "types-python-dateutil",
    "freezegun>=1.4",
    "responses>=0.25",
    "pandas-stubs",
]

[project.scripts]
quant = "quant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
exclude = ["tests/.*", "build/.*"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "fredapi.*", "alpaca.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=quant --cov-report=term-missing"
markers = [
    "network: requires network access (skip in CI default)",
    "alpaca: requires Alpaca paper keys (skip in CI default)",
    "slow: slow test (skip in fast CI)",
]
